# vision-lib

./: README.md
.github/: dependabot.yml
.github/workflows/: build-java-lib.yaml  create-python-release.yml  create-release.yml  pr-build.yml  settings.xml
java/: README.md  pom.xml
java/src/main/java/de/starwit/: App.java
java/src/main/java/de/starwit/pipeline/: RedisConnectionNotAvailableException.java  SaeReader.java  SaeWriter.java  ValkeyConnectionNotAvailableException.java  ValkeyReader.java  ValkeyWriter.java  VisionApiConnectionNotAvailableException.java  VisionApiReader.java  VisionApiWriter.java
java/src/main/java/de/starwit/pipeline/messages/: InvalidMessageTypeException.java  VisionApiParser.java
java/src/main/java/de/starwit/testing/: SaeDump.java  SaeDumpIterator.java  SaeDumpReadException.java
java/src/main/java/de/starwit/testing/messages/: SaeDumpEvent.java  SaeDumpEventMeta.java  SaeDumpMeta.java
java/src/test/java/de/starwit/pipeline/: SaeReaderTest.java  SaeReaderWriterTest.java  VisionApiReaderWriterTest.java
java/src/test/java/de/starwit/pipeline/messages/: VisionApiParserTest.java
java/src/test/java/de/starwit/testing/: SaeDumpIteratorTest.java
java/src/test/resources/: stream1.saedump
python/: .gitignore  README.md  pyproject.toml
python/tests/: test_saedump.py
python/tests/pipeline/: conftest.py  test_consumer.py  test_publisher.py
python/visionlib/: saedump.py
python/visionlib/pipeline/: __init__.py  consumer.py  formats.py  publisher.py  settings.py  tools.py
