[tool.poetry]
name = "visionlib"
version = "0.14.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^6.4.0"
pybase64 = "^1.4.2"
pydantic = "^2.11.7"
pyyaml = "^6.0.1"
pydantic-settings = "^2.10.1"
pyturbojpeg = "^1.8.2"
numpy = "^2.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
testcontainers = {extras = ["redis"], version = "^4.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
